Fixed website width overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,10 @@
     color: #333;
 }
 
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
 
 body{
 
